Added logging warnings